src/app/styles/media.css
/*
    Document   : media
    Created on : Jun 15, 2015, 5:31:01 PM
    Author     : AMU
    Description:
        Purpose of the stylesheet follows.
*/

@media screen and (max-width: 1200px) {

}

@media screen and (max-width: 980px) {
  .search_main {
    padding: 20px 0 92px;

  }
  .lift_part{margin: 15px 0;}
  .pay_part{margin: 15px 0;}
  .search-head-without {
    display: inline-block;
    width: 78% !important;
  }
}
@media screen and (max-width: 768px) {
  .get_soft{}

  .modal-dialog {
    width: 600px;
    margin: 10px auto;
  }

  .login_page{margin: 25px 0 0 0;}
  .rent_tit {
    font-size: 28px; padding: 147px 0 40px;

  }
  .welcome_title {

    font-size: 15px;

  }
  .signin_teg {
    font-size: 15px;
  }
  .search_main {
    padding: 20px 0 5%;
  }
  .sell-main-part{overflow: hidden;}
  .need_main{margin: 25px 0 0 0;}
  .sell_main_tit {
    font-size:16px;
  }
  .sell_lebal {
    font-size: 15px;
  }

  .collapse-for-small {
    margin-top: 34px;
  }

  .collapse-for-small .landing-header {
    padding-left: 20px;
    padding-top: 5px;
  }

  .collapse-for-small .left-link-div {
    display: block;
  }

  .collapse-for-small .req-call-div {
    height: 40px;
  }

  .collapse-for-small .req-call-div .glyphicon-earphone {
    margin-right: 10px;
  }

  .collapse-for-small .sign-in-div .glyphicon-log-in {
    margin-right: 2px;
    margin-left: 0;
  }

  .collapse-for-small .landing-header .get-free-acc {
    margin: 0;
  }

  .collapse-for-small .sign-reg-link {
    padding: 0;
    margin: 8px 0;
  }

  .prelogin-header-btn {
    float: right;
  }

  .prelogin-header-btn .icon-bar {
    background-color: #009ddc;
  }

  .prelogin-header .search-head {
    width: 60% !important;
    margin-bottom: 15px;
  }

  .prelogin-header .see-your-need-small {
    display: block;
    float: none;
  }

  .pre-collapse {
    margin-top: 20px;
  }

}

@media screen and (max-width: 600px) {
  .modal-dialog {
    width: 480px;
    margin: 10px auto;
  }
}

@media only screen and (max-width: 992px) {
  .main_bg {
    background-size: 100% 100%;
    min-height: 500px;
  }

  .rent_tit {
    font-size: 24px;
    padding: 8% 0 5% 0;
  }

  .search-head {
    display: inline-block;
  }

  .logo_part {
    margin-bottom: 10px;
  }

  .right-btn-col {
    padding-top: 10px;
  }

  .right-btn-col .add-list {
    margin: 0;
  }

  .show-for-small {
    display: none;
  }

  .filt-btn {
    display: block;
  }

  .show-filter {
    display: block;
    position: absolute;
    padding-top: 15px;
    padding-bottom: 15px;
    width: 100%;
    background-color: #fff;
    z-index: 100;
    margin-top: 35px;
  }

  .search-res-figure {
    text-align: center;
  }

  .search-res-figure .search-res-img {
    max-width: 350px;
  }

  .lift_box {
    width: 45%;
  }

  .productname_tit {
    font-size: 18px;
  }

  .procutby {
    font-size: 16px;
  }

  .rate_user {
    font-size: 14px;
  }

  .read_review {
    font-size: 14px;
  }

  .rating-div i {
    font-size: 16px;
  }

  .cunsult {
    font-size: 16px;
  }

  .daily_price_product {
    font-size: 18px;
  }

  .you-save {
    text-align: center;
  }

  .you-save .can_dolar_product {
    font-size: 14px;
  }

  .you-save .reg_dolar_product {
    font-size: 18px;
  }

  .you-save .save_dol {
    font-size: 14px;
  }

  .avelble_status {
    text-align: center;
  }

  .divider-col {
    text-align: center;
  }

  .divider-col .product_dash_lf {
    width: 40%;
  }

  .divider-col .product_dash_rg {
    width: 40%;
  }

  .inq_btn {
    float: right;
    margin-right: -20px;
  }

  .calc-col {
    text-align: center;
  }

  .calc-col .enter_zip {
    width: 100%;
    margin: 10px 0 10px 0;
    display: block;
    margin: 10px auto;
    max-width: 250px;
  }

  .calc-col .check_rate {
    width: 100%;
    margin: 0 0 10px 0;
    display: block;
    margin: 10px auto;
    max-width: 250px;
  }

  .product_info_tit {
    font-size: 16px;
  }

  .product_info_p {
    font-size: 16px;
  }

  .push_up {
    margin-bottom: 12px;
  }

  .we_can {
    font-size: 16px;
  }

  .dashboard-small {
    padding: 0 15px 0 15px !important;    
  }

  .manage_job_tit_small {
    font-size: 16px;
  }

  .job-ste-box-small ul li{
    width: 100%;
    margin-left: 0;
    margin-bottom: 15px;
    max-width: 290px;
    float: none;
  }

  .job-ste-box-small ul li:first-child {
    margin: 0 0 15px 0;
  }

  .update_date_number {
    font-size: 40px;
  }

  .update_date_month {
    font-size: 14px;
  }

  .update_date_title {
    width: 45%;
  }

  .reser_tex_small {
    font-size: 13px;
    padding: 0;
  }

  .extend_link {
    display: block;
  }

  .view_contract_link {
    float: none;
  }

  .mng-search-bar {
    float: none !important;
    max-width: 290px;
    width: 290px;
  }

  .bord_dash_bot_small {
    margin-top: 15px;
  }

  .no-search-row .form-left p {
    margin-left: 0px;
    margin-right: 10px;
  }

  .no-search-row .form-left .to {
    margin-left: 0px;
    margin-right: 30px;
  }

  .table-top {
    padding-top: 15px;
  }

  .reserve-success-heading {
    font-size: 16px;
  }

  .reserve-success-heading {
    font-size: 16px;
  }

  .reserve-success-heading {
    font-size: 16px;
  }

  .for-small {
    display: inline-block;
    float: right;
    background: transparent;
    border: none;
    padding-top: 38px;
    outline: none;
  }

  .for-small .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    border-radius: 1px;
    background: #009ddc;
    margin-bottom: 4px;
  }

  .hide-header-navbar {
    display: none;
  }

  .show-header-navbar {
    display: block;
  }

  .my-search-nav {
    padding: 0;
  }

  .my-search-nav .search-head-without {
    width: 85% !important;
  }

  .my_search {
    margin-right: 0;
  }

  .dont-see-div {
    padding-top: 10px;
    padding-bottom: 10px;
    display: block;
  }

  .dropdown-menu {
    min-width: auto;
  }

  .catalog-div .lift_box {
    width: 45%;
  }

  .cart_menu .cart_noti {
    left: 20px;
  }

  .cart_menu .noti{
    left: 72px;
  }

  .sort-by-dropdown {
    right: 0;
    left: auto;
  }

  .reg-success {
    padding: 0;
  }

  .reg-success .panel-success h3 {
    font-size: 16px;
  }

  .reg-success .panel-success h3 i {
    font-size: 18px;
  }

  .reg-success .panel-body {
    font-size: 14px;
  }
}

@media screen and (max-width: 480px) {
  .soc_foot {
    text-align: center;
  }
  .copy-text{text-align: center; padding: 10px 0;}
  .about_part{margin: 15px 0;}
  .logo_part{margin: 15px 0;}
  .logo-center{text-align: center;}
  .req_part{ }
  .get_soft {
    margin: 0 0 0 7px;

  }
  .glyphicon-align-justify{font-size: 18px;}
  .glyphicon-earphone{font-size: 18px;}
  .glyphicon-log-in{font-size: 18px;}
  .eqe_tex {
    font-size: 12px;
    line-height: 23px;
  }
  .req_call {
    font-size: 12px;
    line-height: 23px;
  }
  .req_call a {
    font-size: 12px;
    line-height: 23px;
  }
  .req_part {
    padding: 0;}
  .rent_tit {
    font-size: 23px;
    padding: 10% 0 12px;
  }
  .search-head {
    display: inline-block;
    width: 70% !important;
  }
  .main_bg{
    background-size: 100% 100%;
    min-height: auto;
  }
  .mob_tit {
    font-size: 20px;

  }
  .mob_subtit {
    font-size: 14px;

  }
  .tech-menu ul li h2 {
    font-size: 20px;
  }
  .pro_pic {
    margin: 0;
  }
  .cart_menu ul li a {

    padding: 0 6px;
  }
  .cart_menu .noti{left: 60px;}
  
  .lift_box {
    width: auto;
    display: inline-block;
    float: none;
  }

  .add-job-site-btn {
    margin-bottom: 10px;
  }

  .list-view-btn {
    min-width: 127px;
    border-radius: 4px;
    margin-bottom: 10px;
  }

  .map-view-btn {
    border-radius: 4px;
  }

  .modal-dialog {
    width: 320px;
    margin: 10px auto;
  }

  .catalog-div .lift_box {
    width: auto;
    display: inline-block;
    float: none;
  }

  .signin_teg {
    font-size: 14px;
  }

  .rent-sale-soft {
    padding: 0;
  }

  .rent-sale-soft .rent_title {
    font-size: 16px;
  }

  .rent-sale-soft .rent_subtit {
    font-size: 14px;
  }
}

@media screen and (max-width: 320px) {
  .eqe_tex {
    font-size: 12px;

  }
  .get_soft {
    padding: 6px 16px;
  }
}

